# WaemomOS

./: .editorconfig  .gitmodules  Cargo.toml  README.md  clippy.toml  cocoatly.dev.rs  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
assets/icons/: about.ppm  broom.ppm  files.ppm  notes.ppm  settings.ppm  task.ppm
assets/www/: app.js  index.html  styles.css
src/: appmgr.rs  ata.rs  block.rs  console.rs  context.rs  elf.rs  elfloader.rs  gdt.rs  graphics.rs  heap.rs  image.rs  interrupts.rs  keyboard.rs  lib.rs  loader.rs  main.rs  mm.rs  mouse.rs  pci.rs  pit.rs  scheduler.rs  serial.rs  settings.rs  shell.rs  syscalls.rs  task.rs  tty.rs  vga_buffer.rs  window.rs
src/apps/: broom.rs  mod.rs  network.rs  settings.rs  taskmgr.rs  web.rs
src/fs/: fat.rs  memfs.rs  mod.rs
src/graphics/: font.rs
src/net/: crypto.rs  e1000.rs  ip.rs  mod.rs  netstack.rs  wifi.rs
src/ui/: icons.rs
userlib/: Cargo.toml
userlib/src/: lib.rs
